# enerhabitat_webapp

./: .gitignore  README.md  app.py  changes.md  materials.ini  message.md  pyproject.toml
.ipynb_checkpoints/: requirements-checkpoint.txt
epw/: MEX_AGU_Aguascalientes.765710_TMYx.2004-2018.epw  MEX_AGU_Isla.Lobos.765700_TMYx.2009-2023.epw  MEX_BCN_Ensenada.760500_TMYx.epw  MEX_BCN_Mexicali-Taboada.Intl.AP.760053_TMYx.2009-2023.epw  MEX_BCN_Nuevo.Leon.760400_TMYx.2009-2023.epw  MEX_BCS_Cabo.San.Lucas.Intl.AP.767503_TMYx.2009-2023.epw  MEX_BCS_Ciudad.Constitucion.764020_TMYx.2009-2023.epw  MEX_BCS_La.Paz-de.Leon.Intl.AP.764055_TMYx.2009-2023.epw  MEX_BCS_La.Paz.764050_TMYx.2009-2023.epw  MEX_BCS_Loreto.Intl.AP.763050_TMYx.2009-2023.epw  MEX_BCS_Los.Cabos.Intl.AP.764056_TMYx.2009-2023.epw  MEX_BCS_Mulege.763425_TMYx.2009-2023.epw  MEX_BCS_Santa.Rosalia.762055_TMYx.2009-2023.epw  MEX_CAM_Campeche-Ongay.Intl.AP.766950_TMYx.2009-2023.epw  MEX_CAM_Ciudad.del.Carmen.Intl.AP.767493_TMYx.2009-2023.epw  MEX_CAM_Palizada.768435_TMYx.epw  MEX_CHH_Chihuahua-Villalobos.Intl.AP.762253_TMYx.2009-2023.epw  MEX_CHH_Chihuahua.762250_TMYx.2009-2023.epw  MEX_CHH_Ciudad.Juarez-Gonzalez.Intl.AP.760753_TMYx.2009-2023.epw  MEX_CHH_Hidalgo.del.Parral.763230_TMYx.2009-2023.epw  MEX_CHH_Temosachic.762200_TMYx.2009-2023.epw  MEX_CHH_Villa.Ahumada.761300_TMYx.2009-2023.epw  MEX_CHP_Arriaga.768400_TMYx.2009-2023.epw  MEX_CHP_Chiapa.de.Corzo-Corzo.Intl.AP.760754_TMYx.2009-2023.epw  MEX_CHP_Comitan.de.Dominguiz.768480_TMYx.2009-2023.epw  MEX_CHP_San.Cristobal.de.Las.Casas-Jovel.768450_TMYx.2009-2023.epw  (+8 more)
(+28 files in other folders)
