[project]
name = "eh-shiny"
version = "0.1.0"
description = "Aplicación para evaluar el desempeño térmico de un muro o techo en cualquier parte de la república con o sin sistema de A/C"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "enerhabitat>=0.1.6",
    "plotly>=6.0.1",
    "shiny>=1.3.0",
    "shinywidgets>=0.5.2",
]

